--- a/src/assets/scss/vux-reset.scss
+++ b/src/assets/scss/vux-reset.scss
@@ -1,4 +1,4 @@
-@import "./mixin.scss";
+@import "./helper.scss";
 .weui-cells{
   @include font-dpr(30);
   height:px2rem(90);
@@ -17,3 +17,33 @@
 .weui-toast.vux-toast-top{
   top:px2rem(60) !important;
 }
+
+    /* Popover Start*/
+  .vux-popover{
+    background-color:transparent !important;
+  }
+    /* Popover End*/
+
+  /* Rater Start*/
+  .rater{
+      a{
+          font-size:20px !important;
+          [data-dpr="1"] &{
+              font-size:10px !important;
+          }
+          [data-dpr="3"] &{
+              font-size:30px !important;
+          }
+          width:auto !important;
+          height:auto !important;
+          }
+  }
+
+  /* Alert Start*/
+  .weui-dialog__ft{
+    @include font-dpr(30);
+  }
+  .weui-dialog__bd{
+    @include font-dpr(28);
+  }
+  /* Alert End*/
